# big-query-cdc-terraform

./: Dockerfile  README.md  pyproject.toml
dags/: big_query_cdc.py
include/bigquery_cdc/: bq_table_alter.py  modified_customers1.json  requirements.txt  sample_cdc.py
terraform/: cdc.json  main.tf  terraform.tfstate  terraform.tfstate.backup  variables.tf
